# mcp-cli

./: .gitignore  Cargo.toml  README.md  flake.nix
.beads/: issues.jsonl
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0000/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0001/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0002/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0003/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0004/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0005/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0006/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0007/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0008/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0009/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0010/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0011/: summary.md
.cacophony/agent/aurora-mcp-cli-mcp-cli-dev-aur-0/summary/0012/: summary.md
.cacophony/profiles/: mcp-cli.md
.github/workflows/: ci.yml
src/: lib.rs
