[package]
name = "mcp-cli"
description = "Reusable JSON envelope and MCP stdio helpers for CLI projects"
version = "0.0.1"
edition = "2024"
license = "MIT"
rust-version = "1.85"
readme = "README.md"
repository = "https://github.com/harryaskham/mcp-cli"
homepage = "https://github.com/harryaskham/mcp-cli"
documentation = "https://github.com/harryaskham/mcp-cli/blob/main/README.md"
keywords = ["cli", "json", "mcp"]
categories = ["command-line-utilities", "development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
schemars = { version = "1.0.4", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"

[dev-dependencies]
clap = { version = "4.5.37", features = ["derive"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
similar_names = "allow"
